
                   Yii Framework Change Log
                   ========================

Version 1.1.9 work in progress
------------------------------
- Bug: Removed unnecessary COciCommandBuilder::createInsertCommand quotes (Sam Dark)
- Bug: CHttpRequest.sendFile() gives incorrect content length when output_handler is enabled through code or non output_handler directive (Sam Dark)
- Chg: Upgraded JQuery UI to 1.8.14 (Sam Dark)
- Chg: Upgraded jQuery to 1.6.2 (Sam Dark)
- Chg: Reverted back the changes made to fix issue 2284 (Qiang)

Version 1.1.8 June 26, 2011
---------------------------
- Bug: Fixed a typo that may cause issue when setting custom script packages with baseUrl option for CClientScript (Qiang)
- Bug #2001: CGridView now renders the body after the footer in order to conform to the standard (Qiang)
- Bug #2236: CJuiTabs - added id to ajax tabs (sebas)
- Bug #2272: Fixed the bug of undefined index css in CTreeView (mdomba)
- Bug #2274: CDbCriteria can't merge "with" anymore if a scope applied another "with" condition (Sam Dark, Michael)
- Bug #2275: Fixed the bug that ajax error handler was not called in case of exception (mdomba)
- Bug #2284: Fixed the bug that CActiveForm clientValidation did not work with tabular input forms (Qiang)
- Bug #2292: Fixed the bug that CActiveDataProvider may ignore the specified criteria for the sorting configuration (Qiang)
- Bug #2294: Fixed the bug that duplicated PK columns may appear in the join SQL statement if custom select option is used (Qiang)
- Bug #2303: Fixed not logging anything on WSDL service failure (Sam Dark)
- Bug #2312: Fixed the bug that auto-incremental columns for MSSQL may return non-integers as last insert ID (Qiang)
- Bug #2328: Fixed the bug that table names was not quoted in CDbAuthManager (mdomba)
- Bug #2338: Fixed a typo in the client validation code for CNumberValidator (Qiang)
- Bug #2359: Fixed the bug that checkbox in Gii view template may be hidden automatically (Qiang)